--- a/scss/layout/_concert-page.scss
+++ b/scss/layout/_concert-page.scss
@@ -99,7 +99,10 @@
     flex-flow: row wrap;
     @include col(1,3);
     &:nth-last-child(3n+1) {// hackety hack hack
-      margin-left: 16px; // this number needs to match $gutter you pass in above, like col(1,3,$gutter:x)
+      margin-left: ($default-gutter / $max-container-width) * 100%;
+      // $default-gutter needs to match $gutter you pass in above,
+      // as well as $max-container-width 
+      // like col(1,3,$container-width: $max-container-width,$gutter:$default-gutter)
       margin-right: auto;
     }
   }
